# vivarium-kecoli

./: .gitattributes  .gitignore  README.md
envs/: v2Ecoli.def
mapping_results/: Mendes_EcoCyc_DUF.xlsx  enz_mapping_kecoli74.txt  query_failed_kecoli74.txt  query_failed_millard.txt  query_manual_kecoli74.txt  query_manual_millard.txt  translation_results_kecoli74.txt  translation_results_millard.txt
models/: E_coli_Millard2016.cps  E_coli_Millard2016.txt  E_coli_Millard2016_MCA.txt  E_coli_Millard2016_time_course.txt  k-ecoli307.xml  k-ecoli74.txt
models/pcbi.1005396.s003/: 31.txt  E_coli_Millard2016.cps  E_coli_Millard2016_pe.txt
processes/: kecoli_cell.py  kecoli_cell_2.py  kecoli_cell_3.py  kecoli_cell_test.py  kecoli_cell_test_2.py
resources/SmartTable_tests/: input2.csv  input_1.csv
scripts/: SPN_cell.py  biocyc_webservice.py  biovelo_example.py  ecocyc_mapping.py  ecocyc_mapping_2.py  ecocyc_mapping_kecoli307.py  ecocyc_mapping_millard.py  run_kecoli307.py  run_kecoli74.py  run_millard.py  run_vkecoli.py  stoicmat_generator.py  valdiate_kecoli74.py  validate_millard.py  vkecoli_verify.py
test_scripts/: test_model.py
utils/: basico_helper.py  biovelo.py  mapping.py  plotting.py  run_model.py  updater.py
v2Ecoli-metab/: README.md  pyproject.toml  setup.cfg
v2Ecoli-metab/examples/: load_zarr.ipynb  save_zarr.ipynb
v2Ecoli-metab/src/cli/: __init__.py  dispatch.py  test.py  validate.py
v2Ecoli-metab/src/model/: k-ecoli74.xml
v2Ecoli-metab/src/process/: kecoli_cell.py
v2Ecoli-metab/src/util/: basico_helper.py  plotting.py  updater.py
(+9 files in other folders)
