
[metadata]
name = v2Ecoli-metab
version = 0.1
author = Arnab Mutsuddy, Boyan Beronov
author_email = arnab.mutsuddy@gmail.com, b.beronov@gmail.com
description = Experimental metabolism module for the v2Ecoli whole cell model.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/vivarium-collective/v2Ecoli
platforms = all
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Scientific/Engineering :: Artificial Life
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry

[options]
python_requires = >=3.12
install_requires =
    vivarium-core >= 1.6.5
    copasi-basico >= 0.83
    python-libsbml >= 5.20.4
package_dir =
    v2Ecoli.metab = src
packages =
    v2Ecoli.metab
    v2Ecoli.metab.process
    v2Ecoli.metab.util
include_package_data = true
zip_safe = false

[options.entry_points]
console_scripts =
    v2metab = v2Ecoli.metab.cli:main

[options.package_data]
v2Ecoli.metab.model = *.xml

[options.extras_require]
dev =
    pytest >= 8.3
    pytest-xdist >= 3.6
